--- a/LikesProgram/LikesProgram.vcxproj
+++ b/LikesProgram/LikesProgram.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="src\LikesProgram\String.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\LikesProgram\CoreUtils.hpp" />
     <ClInclude Include="include\LikesProgram\LikesProgramLibExport.hpp" />
     <ClInclude Include="include\LikesProgram\Timer.hpp" />
     <ClInclude Include="include\LikesProgram\math\Math.hpp" />
