--- a/LikesProgram/LikesProgram.vcxproj.filters
+++ b/LikesProgram/LikesProgram.vcxproj.filters
@@ -98,6 +98,9 @@
     <ClInclude Include="include\test\LoggerTest.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="include\test\ThreadPoolTest.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\LikesProgram\unicode\CreateUnicodeCaseMap.py" />
