添加 CMake 支持，修改文件编码为 UTF-8

--- a/LikesProgram/LikesProgram.vcxproj
+++ b/LikesProgram/LikesProgram.vcxproj
@@ -144,6 +144,8 @@
     <ClCompile Include="src\LikesProgram\String.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\LikesProgram\config\Configuration.hpp" />
+    <ClInclude Include="include\LikesProgram\config\JsonSerializer.hpp" />
     <ClInclude Include="include\LikesProgram\CoreUtils.hpp" />
     <ClInclude Include="include\LikesProgram\LikesProgramLibExport.hpp" />
     <ClInclude Include="include\LikesProgram\Logger.hpp" />
