--- a/LikesProgram/CMakeLists.txt
+++ b/LikesProgram/CMakeLists.txt
@@ -19,9 +19,9 @@ project(LikesProgram
 # =========================
 # 配置选项
 # =========================
-option(BUILD_SHARED_LIBS "Build LikesProgram as shared library" OFF)
-option(ENABLE_EXAMPLES   "Build example/demo programs"           ON)
-option(ENABLE_STRICT_WARNINGS "Enable strict compiler warnings" OFF)
+option(BUILD_SHARED_LIBS "Build LikesProgram as shared library" ON)
+option(ENABLE_EXAMPLES   "Build example/demo programs"           OFF)
+option(ENABLE_STRICT_WARNINGS "Enable strict compiler warnings" ON)
 
 # =========================
 # 设置 C++ 标准
