--- a/LikesProgram/LikesProgram.vcxproj
+++ b/LikesProgram/LikesProgram.vcxproj
@@ -131,10 +131,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\LikesProgram\metrics\Gauge.cpp" />
     <ClCompile Include="src\LikesProgram\Configuration.cpp" />
     <ClCompile Include="src\LikesProgram\CoreUtils.cpp" />
     <ClCompile Include="src\LikesProgram\Logger.cpp" />
     <ClCompile Include="src\LikesProgram\math\Math.cpp" />
+    <ClCompile Include="src\LikesProgram\metrics\Counter.cpp" />
+    <ClCompile Include="src\LikesProgram\metrics\Histogram.cpp" />
+    <ClCompile Include="src\LikesProgram\metrics\Metrics.cpp" />
+    <ClCompile Include="src\LikesProgram\metrics\Registry.cpp" />
+    <ClCompile Include="src\LikesProgram\metrics\Summary.cpp" />
     <ClCompile Include="src\LikesProgram\ThreadPool.cpp" />
     <ClCompile Include="src\LikesProgram\unicode\CaseBMP.cpp" />
     <ClCompile Include="src\LikesProgram\unicode\CaseSMP.cpp" />
@@ -149,6 +155,12 @@
     <ClInclude Include="include\LikesProgram\CoreUtils.hpp" />
     <ClInclude Include="include\LikesProgram\LikesProgramLibExport.hpp" />
     <ClInclude Include="include\LikesProgram\Logger.hpp" />
+    <ClInclude Include="include\LikesProgram\metrics\Counter.hpp" />
+    <ClInclude Include="include\LikesProgram\metrics\Gauge.hpp" />
+    <ClInclude Include="include\LikesProgram\metrics\Histogram.hpp" />
+    <ClInclude Include="include\LikesProgram\metrics\Metrics.hpp" />
+    <ClInclude Include="include\LikesProgram\metrics\Registry.hpp" />
+    <ClInclude Include="include\LikesProgram\metrics\Summary.hpp" />
     <ClInclude Include="include\LikesProgram\ThreadPool.hpp" />
     <ClInclude Include="include\LikesProgram\Timer.hpp" />
     <ClInclude Include="include\LikesProgram\math\Math.hpp" />
