--- a/LikesProgram/LikesProgram.vcxproj.filters
+++ b/LikesProgram/LikesProgram.vcxproj.filters
@@ -42,7 +42,7 @@
     <ClCompile Include="src\LikesProgram\CoreUtils.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\LikesProgram\ThreadPool.cpp">
+    <ClCompile Include="src\LikesProgram\threading\ThreadPool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\LikesProgram\Logger.cpp">
@@ -73,6 +73,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\LikesProgram\time\Time.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LikesProgram\threading\IThreadPoolObserver.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -116,7 +119,7 @@
     <ClInclude Include="include\LikesProgram\CoreUtils.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\ThreadPool.hpp">
+    <ClInclude Include="include\LikesProgram\threading\ThreadPool.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\LikesProgram\Logger.hpp">
@@ -168,6 +171,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\test\Test.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\LikesProgram\threading\IThreadPoolObserver.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
